# whu_pwa

./: .gitignore
analysis/: root  (+3 more)
codes_frac/: .#whu_pwa_parameter_table.txt  .cproject  .gitignore  .project  CMakeLists.txt  DPFAngular.cc  DPFAngular.h  DPFPWAPdf.cc  DPFPWAPdf.h  GPATH  GRTAGS  GTAGS  Makefile.arch  MultDevice.h  MyAngular.cc  PWA_CTRL.C  PWA_CTRL.H  calculate0p.cc  cuComplex.h  cu_DPFPropogator.h  data_obj.cc  data_obj.h  fit_parameter_interface.cc  fit_parameter_interface.h  fitproxy.cc  fitproxy.h  kernel_calEva.cu  kernel_calEva.h  kernel_calEva.ptx  log  makefile  minuit_makefile  mybash.sh  pdf_object.h  pwa.C  test_minuit2.cc  whu_constants_and_definitions.h  whu_my_parameter.cc  whu_propogator.cc  whu_propogator.h  (+3 more)
codes_frac/couse_id/: nbgrader_config.py
codes_frac/doxygen/: Doxyfile
codes_frac/gtest/: test_dataobj
codes_frac/others/: DPFPWAPdf.cc  DPFPWAPdf.h  DPFPropogator.h  PWA_CTRL.C  Untitled.ipynb  Untitled2.ipynb  Untitled3.ipynb  cuComplex.h  fit_parameters.cc  fitproxy.cc  kernel_calEva.h  makefile  parameter_table.cc  parameter_table.h  pdf_object.C  phikk_structure.cc  phipipi_structure.cc  pp2log  pplog  pwa.C  test  test.reg.c  test.sh  whu_fitproxy.cc  whu_pwa.C
codes_frac/src/cpp/: CMakeLists.txt  DPFAngular.cc  DPFPWAPoint.cc  calculate0p.cc  data_obj.cc  data_obj_new.cc  test_minuit2.cc  whu_my_parameter.cc  whu_propogator.cc  whu_pwa_fcn.cc
codes_frac/src/cuda/: .directory  CMakeLists.txt  MultDevice.cu  kernel.cu
codes_frac/src/cuda_test/: a.out  kernel.cu  reduce_test.cu
codes_frac/src/gtest/: CMakeLists.txt  (+1 more)
(+23 files in other folders)
