cmake_minimum_required(VERSION 3.8)
project(pwa LANGUAGES CXX CUDA)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib/)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib/)
set(CMAKE_BUILD_TYPE "Debug")
message(status "Source Director is ${PROJECT_BINARY_DIR}")
find_package(ROOT COMPONENTS Minuit REQUIRED)
include(${ROOT_USE_FILE})
include_directories(${PROJECT_SOURCE_DIR}/src/include/)
add_subdirectory(${PROJECT_SOURCE_DIR}/src/cpp)
