cmake_minimum_required(VERSION 3.8)
project(pwa LANGUAGES CXX CUDA)
set(CUDA_NVCC_FLAGS "-g -G")
set(CMAKE_CXX_FLAGS "-g")  
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib/)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib/)
message(status "Source Director is ${PROJECT_BINARY_DIR}")
find_package(ROOT COMPONENTS  REQUIRED)
MESSAGE( STATUS “ROOT_INCLUDE_DIRS is :” ${ROOT_INCLUDE_DIRS} )
MESSAGE( STATUS “ROOT_LIBRARIES is :” ${ROOT_LIBRARIES} )
MESSAGE( STATUS “ROOT_CXX_FLAGS is :” ${ROOT_CXX_FLAGS} )
include(${ROOT_USE_FILE})
include_directories(${PROJECT_SOURCE_DIR}/src/include/)
add_subdirectory(${PROJECT_SOURCE_DIR}/src/cpp)
add_subdirectory( ${PROJECT_SOURCE_DIR}/src/cuda) 
